Fixed spacing and margin issues with login page.

--- a/src/components/login/style.scss
+++ b/src/components/login/style.scss
@@ -26,7 +26,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-
+      
       .form-group {
         display: flex;
         flex-direction: column;
@@ -36,7 +36,6 @@
         }
         input {
           min-width: 18em;
-          margin-top: -10px;
           padding: 0px 10px;
           font-size: 16px;
           font-family: 'Raleway', sans-serif;
@@ -55,11 +54,6 @@
   }
 
   .footer {
-    margin-bottom: 6em;
-  }
-
-  .alert {
-    display: flex;
-    flex-direction: column;
+    margin-bottom: 3em;
   }
 }
