--- a/src/index.scss
+++ b/src/index.scss
@@ -42,12 +42,11 @@
 //Login Main Container
 .login {
   width: 27em;
-  height: 40em;
+  height: 50em;
   //min-height: 44em;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5px;
   position: relative;
   z-index: 99;
   .container {
